--- a/DoAn/ComputerStore/Areas/Admin/Views/Home/Index.cshtml
+++ b/DoAn/ComputerStore/Areas/Admin/Views/Home/Index.cshtml
@@ -103,6 +103,7 @@
 
                                 <div class="mt-3 text-center">
                                     <p class="text-muted font-15 font-family-secondary mb-0">
+                                        @*Fill query theo sản phẩm bán chạy*@
                                         <span class="mx-2"><i class="mdi mdi-checkbox-blank-circle text-primary"></i> Desktop</span>
                                         <span class="mx-2"><i class="mdi mdi-checkbox-blank-circle text-pink"></i> Laptop</span>
                                     </p>
