--- a/DoAn/ComputerStore/Areas/User/Views/Index.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/Index.cshtml
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="@Url.Content("/assets_user/css/style.css")">
+    <link rel="stylesheet" href="@Url.Content("~/assets_user/css/style.css")">
     <link rel="stylesheet" href="@Url.Content("~/assets_user/font/css/all.css")">
     <link rel="stylesheet" href="@Url.Content("~/assets_user/css/base.css")">
     <link rel="preconnect" href="https://fonts.gstatic.com">
