--- a/DoAn/ComputerStore/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DoAn/ComputerStore/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -9,7 +9,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- App favicon -->
     <link rel="shortcut icon" href="@Url.Content("~/assets_admin/images/favicon.ico")">
-
+    <!-- third party css -->
+    <link href="~/assets_admin/libs/datatables/dataTables.bootstrap4.css" rel="stylesheet" type="text/css">
+    <link href="~/assets_admin/libs/datatables/responsive.bootstrap4.css" rel="stylesheet" type="text/css">
+    <link href="~/assets_admin/libs/datatables/buttons.bootstrap4.css" rel="stylesheet" type="text/css">
+    <link href="~/assets_admin/libs/datatables/select.bootstrap4.css" rel="stylesheet" type="text/css">
+    <!-- third party css end -->
     <!-- App css -->
     <link href="~/assets_admin/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="~/assets_admin/css/icons.min.css" rel="stylesheet" type="text/css">
@@ -225,12 +230,12 @@
             <div class="logo-box">
                 <a href="index.html" class="logo text-center">
                     <span class="logo-lg">
-                        <img src="assets\images\logo-light.png" alt="" height="20">
+                        <img src="~/assets_admin/images/logo-light.png" alt="" height="20">
                         <!-- <span class="logo-lg-text-light">Xeria</span> -->
                     </span>
                     <span class="logo-sm">
                         <!-- <span class="logo-sm-text-dark">X</span> -->
-                        <img src="assets\images\logo-sm.png" alt="" height="24">
+                        <img src="~/assets_admin/images/logo-sm.png" alt="" height="24">
                     </span>
                 </a>
             </div>
@@ -521,6 +526,25 @@
     @Scripts.Render("~/assets_admin/libs/jquery-sparkline/jquery.sparkline.min.js")
     @Scripts.Render("~/assets_admin/js/pages/dashboard-1.init.js")
     @Scripts.Render("~/assets_admin/js/app.min.js")
+    <!-- third party js -->
+    @Scripts.Render("~/assets_admin/libs/datatables/jquery.dataTables.min.js")
+    @Scripts.Render("~/assets_admin/libs/datatables/dataTables.bootstrap4.js")
+    @Scripts.Render("~/assets_admin/libs/datatables/dataTables.responsive.min.js")
+    @Scripts.Render("~/assets_admin/libs/datatables/responsive.bootstrap4.min.js")
+    @Scripts.Render("~/assets_admin/libs/datatables/dataTables.buttons.min.js")
+    @Scripts.Render("~/assets_admin/libs/datatables/buttons.bootstrap4.min.js")
+    @Scripts.Render("~/assets_admin/libs/datatables/buttons.html5.min.js")
+    @Scripts.Render("~/assets_admin/libs/datatables/buttons.flash.min.js")
+    @Scripts.Render("~/assets_admin/libs/datatables/buttons.print.min.js")
+    @Scripts.Render("~/assets_admin/libs/datatables/dataTables.keyTable.min.js")
+    @Scripts.Render("~/assets_admin/libs/datatables/dataTables.select.min.js")
+    @Scripts.Render("~/assets_admin/libs/pdfmake/pdfmake.min.js")
+    @Scripts.Render("~/assets_admin/libs/pdfmake/vfs_fonts.js")
+    @Scripts.Render("~/assets_admin/js/pages/datatables.init.js")
+    <!-- third party js ends -->
+    <!-- Datatables init -->
+    <script src="assets\js\pages\datatables.init.js"></script>
     @RenderSection("scripts", required: false)
+
 </body>
 </html>
