--- a/DoAn/ComputerStore/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DoAn/ComputerStore/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -45,30 +45,8 @@
 
                 <li class="dropdown d-none d-lg-block">
                     <a class="nav-link dropdown-toggle mr-0 waves-effect waves-light" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                        <img src="assets\images\flags\us.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">English <i class="mdi mdi-chevron-down"></i> </span>
+                        <img src="~/Sources/Avatar.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">English <i class="mdi mdi-chevron-down"></i> </span>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <!-- item-->
-                        <a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <img src="assets\images\flags\germany.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">German</span>
-                        </a>
-
-                        <!-- item-->
-                        <a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <img src="assets\images\flags\italy.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Italian</span>
-                        </a>
-
-                        <!-- item-->
-                        <a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <img src="assets\images\flags\spain.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Spanish</span>
-                        </a>
-
-                        <!-- item-->
-                        <a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <img src="assets\images\flags\russia.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Russian</span>
-                        </a>
-
-                    </div>
                 </li>
 
                 <li class="dropdown notification-list">
@@ -170,9 +148,9 @@
 
                 <li class="dropdown notification-list">
                     <a class="nav-link dropdown-toggle nav-user mr-0 waves-effect waves-light" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                        <img src="assets\images\users\avatar-1.jpg" alt="user-image" class="rounded-circle">
+                        <img src="~/Sources/Avatar.jpg" alt="user-image" class="rounded-circle">
                         <span class="pro-user-name ml-1">
-                            Nik Patel <i class="mdi mdi-chevron-down"></i>
+                            Roses <i class="mdi mdi-chevron-down"></i>
                         </span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right profile-dropdown ">
@@ -287,110 +265,7 @@
 
                     </div>
                 </li>
-
-                <li class="dropdown dropdown-mega d-none d-lg-block">
-                    <a class="nav-link dropdown-toggle waves-effect waves-light" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                        Mega Menu
-                        <i class="mdi mdi-chevron-down"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-megamenu">
-                        <div class="row">
-                            <div class="col-sm-8">
-
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        <h5 class="text-dark mt-0">UI Components</h5>
-                                        <ul class="list-unstyled megamenu-list">
-                                            <li>
-                                                <a href="javascript:void(0);">Widgets</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Nestable List</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Range Sliders</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Masonry Items</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Sweet Alerts</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Treeview Page</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Tour Page</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <h5 class="text-dark mt-0">Applications</h5>
-                                        <ul class="list-unstyled megamenu-list">
-                                            <li>
-                                                <a href="javascript:void(0);">eCommerce Pages</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">CRM Pages</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Email</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Calendar</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Team Contacts</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Task Board</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Email Templates</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <h5 class="text-dark mt-0">Extra Pages</h5>
-                                        <ul class="list-unstyled megamenu-list">
-                                            <li>
-                                                <a href="javascript:void(0);">Left Sidebar with User</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Menu Collapsed</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Small Left Sidebar</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">New Header Style</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Search Result</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Gallery Pages</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0);">Maintenance & Coming Soon</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="text-center mt-3">
-                                    <h3 class="text-dark">Special Discount Sale!</h3>
-                                    <h4>Save up to 70% off.</h4>
-                                    <button class="btn btn-primary mt-3">Download Now <i class="ml-1 mdi mdi-arrow-right"></i></button>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </li>
+              
             </ul>
         </div>
         <!-- end Topbar -->
@@ -404,103 +279,33 @@
 
                     <ul class="metismenu" id="side-menu">
 
-                        <li class="menu-title">Navigation</li>
+                        <li class="menu-title">Danh sách quản lý</li>
 
                         <li>
-                            <a href="javascript: void(0);" class="waves-effect">
+                            <a href="~/Admin/Home/Index" class="waves-effect">
                                 <i class="remixicon-dashboard-line"></i>
                                 <span class="badge badge-pink badge-pill float-right">2</span>
-                                <span> Dashboards </span>
-                            </a>
-                            <ul class="nav-second-level" aria-expanded="false">
-                                <li>
-                                    <a href="index.html">Dashboard 1</a>
-                                </li>
-                                <li>
-                                    <a href="dashboard-2.html">Dashboard 2</a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a href="javascript: void(0);" class="waves-effect">
-                                <i class="remixicon-file-copy-2-line"></i>
-                                <span> Pages </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="nav-second-level" aria-expanded="false">
-
-                                <li>
-                                    <a href="pages-login.html">Log In</a>
-                                </li>
-                                <li>
-                                    <a href="pages-register.html">Register</a>
-                                </li>
-
-                                <li>
-                                    <a href="pages-logout.html">Logout</a>
-                                </li>
-                                <li>
-                                    <a href="pages-404.html">Error 404</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="menu-title mt-2">Components</li>
-
-
-
-                        <li>
-                            <a href="widgets.html" class="waves-effect">
-                                <i class="remixicon-vip-crown-2-line"></i>
-                                <span> Widgets </span>
+                                <span> Biểu đồ </span>
                             </a>
                         </li>
-
                         <li>
-                            <a href="javascript: void(0);" class="waves-effect">
-                                <i class="remixicon-vip-diamond-line"></i>
-                                <span> Forms </span>
-                                <span class="menu-arrow"></span>
+                            <a href="~/Admin/OrderItems/Index" class="waves-effect">
+                                <i class="remixicon-shopping-cart-2-fill"></i>
+                                <span> Đơn hàng </span>
                             </a>
-                            <ul class="nav-second-level" aria-expanded="false">
-                                <li>
-                                    <a href="forms-elements.html">General Elements</a>
-                                </li>
-                                <li>
-                                    <a href="forms-validation.html">Validation</a>
-                                </li>
-                                <li>
-                                    <a href="forms-file-uploads.html">File Uploads</a>
-                                </li>
-                            </ul>
                         </li>
-
                         <li>
-                            <a href="javascript: void(0);" class="waves-effect">
-                                <i class="remixicon-table-line"></i>
-                                <span> Tables </span>
-                                <span class="menu-arrow"></span>
+                            <a href="~/Admin/ProductDetails/Index" class="waves-effect">
+                                <i class="remixicon-computer-fill"></i>
+                                <span> Sản phẩm </span>
                             </a>
-                            <ul class="nav-second-level" aria-expanded="false">
-                                <li>
-                                    <a href="tables-basic.html">Basic Tables</a>
-                                </li>
-                                <li>
-                                    <a href="tables-datatables.html">Data Tables</a>
-                                </li>
-                                <li>
-                                    <a href="tables-editable.html">Editable Tables</a>
-                                </li>
-                                <li>
-                                    <a href="tables-tablesaw.html">Tablesaw Tables</a>
-                                </li>
-                                <li>
-                                    <a href="tables-responsive.html">Responsive Tables</a>
-                                </li>
-                                <li>
-                                    <a href="tables-footables.html">FooTables</a>
-                                </li>
-                            </ul>
+                        </li>
+                        <li>
+                            <a href="~/Admin/ChatMessages/Index" class="waves-effect">
+                                <i class="remixicon-messenger-fill"></i>
+                                <span class="badge badge-pink badge-pill float-right">5</span>
+                                <span> Tin nhắn </span>
+                            </a>
                         </li>
                     </ul>
 
