--- a/DoAn/ComputerStore/Areas/Admin/Views/ProductDetails/Index.cshtml
+++ b/DoAn/ComputerStore/Areas/Admin/Views/ProductDetails/Index.cshtml
@@ -7,40 +7,101 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.SpecificationValue)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Product.ProductName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProductSpecification.SpecificationName)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SpecificationValue)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Product.ProductName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProductSpecification.SpecificationName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+<div class="content-page">
+    <div class="content">
 
-</table>
+
+        <!-- Start Content-->
+        <div class="container-fluid">
+
+            <!-- start page title -->
+            <div class="row">
+                <div class="col-12">
+                    <div class="page-title-box">
+                        <div class="page-title-right">
+                            <ol class="breadcrumb m-0">
+                                <li class="breadcrumb-item"><a href="javascript: void(0);">Minton</a></li>
+                                <li class="breadcrumb-item"><a href="javascript: void(0);">Tables</a></li>
+                                <li class="breadcrumb-item active">Quản lý đơn hàng</li>
+                            </ol>
+                        </div>
+                        <h4 class="page-title">Quản lý đơn hàng</h4>
+                    </div>
+                </div>
+            </div>
+            <!-- end page title -->
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <p>
+                                @Html.ActionLink("Thêm bảng", "Create")
+                            </p>
+                            <h4 class="header-title">Danh sách đơn hàng</h4>
+                            <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
+                                <thead>
+                                    <tr>
+                                        <th>Mã</th>
+                                        <th>Ảnh</th>
+                                        <th>Tên sản phẩm</th>
+                                        <th>Thể loại</th>
+                                        <th>Thông số kỹ thuật</th>
+                                        <th>Mô tả</th>
+                                        <th>Giá</th>
+                                        <th>Thao tác</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model.GroupBy(p => p.ProductID).Select(g => g.First()))
+                                    {
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.ProductID)
+                                            </td>
+                                            <td>
+
+                                                <image style="height: 120px" src="~/Sources/@Html.DisplayFor(modelItem => item.Product.Image1)"></image>
+
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Product.ProductName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Product.Category.CategoryName)
+                                            </td>
+                                            <td>
+                                                @Html.Raw(string.Join("<br>", Model
+                                                    .Where(d => d.ProductID == item.ProductID)
+                                                    .Select(d => $"{d.ProductSpecification.SpecificationName}: {d.SpecificationValue}")))
+                                            </td>
+                                            <td>
+                                                @Html.Raw(string.Join("<br>", Enumerable.Range(0, (item.Product.Description.Length + 49) / 50)
+                                                    .Select(i => item.Product.Description.Substring(i * 50, Math.Min(50, item.Product.Description.Length - i * 50)))))
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Product.Price)
+                                            </td>
+                                            <td>
+                                                @Html.ActionLink("Edit", "Edit", new { id = item.ProductID }) |
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.ProductID })
+                                            </td>
+                                            <td></td>
+                                        </tr>
+                                    }
+                                </tbody>
+
+                            </table>
+
+                        </div> <!-- end card body-->
+                    </div> <!-- end card -->
+                </div><!-- end col-->
+            </div>
+            <!-- end row-->
+        </div> <!-- container -->
+
+    </div> <!-- content -->
+
+
+</div>
